# rust-with-c

./: .clang-format  .env.example  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml  libapp_nostd.h
.cargo/: config.toml
config/: app.ini
include/: bindings.rs  include.h  irc_bindings.rs  libapp_nostd.h
src/: cbind.rs  foo.rs  irc.rs  lib.rs  logger.rs  main-micro.rs  main.rs  no_std.rs  prelude.rs
tests/: test_lib.c  test_lib.rs
